# Lilly

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  setup_project.py
.github/workflows/: ci.yml
configs/: v1.yaml  v2.yaml
docs/plans/: 2025-02-25-phrase-level-typing-model-design.md  2025-02-25-phrase-level-typing-model.md  2026-03-01-lilly-v3-design.md  2026-03-01-lilly-v3-implementation.md  2026-03-02-cli-ui-abstraction-design.md  2026-03-02-cli-ui-abstraction.md
lilly/: __init__.py
lilly/cli/: ui.py
lilly/core/: __init__.py  config.py  encoding.py  gpu.py  hardware.py  keyboard.py  losses.py
lilly/data/: __init__.py  download.py  pipeline.py  preprocess.py  segment.py  segment_v3.py  style.py
lilly/evaluation/: __init__.py  distributional.py  evaluator.py  metrics.py  realism.py  visualization.py
lilly/export/: __init__.py  converter.py
lilly/inference/: __init__.py  context.py  generator.py  preview.py  sampling.py
lilly/models/: __init__.py  components.py  typing_model.py
lilly/training/: __init__.py  callbacks.py  losses.py  schedule.py  trainer.py  trainer_v1.py  trainer_v2.py
scripts/: download.py  evaluate.py  export.py  extract_features.py  generate.py  live_preview.py  preprocess.py  segment_v3.py  train.py
tests/: __init__.py  test_components.py  test_encoding.py  test_generator.py  test_gpu.py  test_keyboard.py  test_losses.py  test_segment.py  test_style.py  test_typing_model.py
