[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilly"
version = "0.1.0"
description = "ML typing behavior model trained on the Aalto 136M Keystrokes dataset"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Owen Gregson"},
]

dependencies = [
    "tensorflow>=2.15.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
export = ["tensorflowjs>=4.17.0"]
eval = ["matplotlib>=3.7.0", "scikit-learn>=1.3.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "tensorflowjs>=4.17.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]
all = ["lilly[export,eval,dev]"]

[tool.setuptools.packages.find]
include = ["lilly*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
