[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilly"
version = "0.1.0"
description = "ML typing behavior model trained on the Aalto 136M Keystrokes dataset"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Owen Gregson"},
]

dependencies = [
    "tensorflow>=2.16.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
export = ["tensorflowjs>=4.20.0"]
eval = ["matplotlib>=3.8.0", "scikit-learn>=1.4.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "tensorflowjs>=4.20.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
]
all = ["lilly[export,eval,dev]"]

[tool.setuptools.packages.find]
include = ["lilly*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
